[tool.poetry]
name = "mkdocs-eventum"
version = "0.0.1"
description = ""
authors = ["gaulix <vlnazarenko1199@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.39"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
